--- a/index.html
+++ b/index.html
@@ -4,29 +4,71 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Noni Landing</title>
   <script src="main.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="header">
     <div class="logo">
-      <img src="imagenes/Noni.png" alt="logo">
+      <img src="Noni.png" alt="logo">
     </div>
+    <div class="sections">
     <div class="secciones">
-      <p>Home</p>
-      <p>Why Us?</p>
-      <p>Reviews</p>
-      <p>Issues</p>
-      <p>Contact</p>
-    </div>
-    <div class="redes">
-      <img src="imagenes/Group 68.png" alt="">
+      <p class="seccionita">Home</p>
+      <p class="seccionita">Why Us?</p>
+      <p class="seccionita">Reviews</p>
+      <p class="seccionita">Issues</p>
+      <p class="seccionita">Contact</p>
     </div>
   </div>
-  <div class="sectionone"></div>
-  <div class="sectiontwo"></div>
-  <div class="sectionthree"></div>
+    <div class="redes">
+      <img src="Group 68.png" alt="">
+    </div>
+  </div>
+  <div class="sectionone">
+     <div class="slogan-block"> 
+      <div class="slogan">
+        <p id="textoraro">The Most Quirky Writings <br> Delivered Right To Your Inbox</p>
+      </div>
+    </div>
+      <div class="inputinput">
+      <div class="finalinput">
+        <div class="input-text">
+        <input id="inputwhite" type="text" placeholder="Enter your email address">
+        <a href="postsuscripcion.html"><div id="botonbusqueda"><p id="buscar-palabra">Subscribe</p></div></a>
+      </div>
+    </div>
+    </div>
+      <div id="marcas">
+        <img src="Group 66.png" alt="">
+      </div>
+  </div>
+  <div class="sectiontwo">
+    <div class="twoflex">
+    <div class="frase"><p id="segundotexto">
+      I subscribed to this newsletter because I heard it's really <br>
+       creative. The last thing I want is for my inbox to be cluttered <br>
+        with the same old stuff. Every day when I open my email, I find <br>
+         something new and exciting in Noni's emails. You name it, they <br>
+          mention it in their newsletter!
+    </p></div>
+   <div id="piefrase"><br><p id="nombreraro"> - Shambhavi Mishra,</p><p id="agregadoraro"> Cutest girl on the planet</p></div>
+  </div>
+  </div>
+  <div class="sectionthree">
+    <div id="titulosectionthree"><p>Why Noni, not others?</p></div>
+    <p id="textosectionthree">There are many reasons to prefer Noni over other <br>
+       newsletters, and it’s impossible to list all of them. But <br>
+        for now, these four are enough to convince you:</p>
+  </div>
+  
+  <div class="menuesdesplegables">
+
+
+
+  </div>
+  
   <div class="sectionfour"></div>
   <div class="sectionsuscribe"></div>
   <div class="sectionfoot"></div>
