--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Noni Landing</title>
   <script src="main.js"></script>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="Noni.png"/>
 </head>
 <body>
   <div class="header">
@@ -29,7 +30,7 @@
   <div class="sectionone">
      <div class="slogan-block"> 
       <div class="slogan">
-        <p id="textoraro">The Most Quirky Writings <br> Delivered Right To Your Inbox</p>
+        <br><p id="textoraro"> <br><br> The Most Quirky Writings <br> Delivered Right To Your Inbox</p>
       </div>
     </div>
       <div class="inputinput">
@@ -53,8 +54,8 @@
          something new and exciting in Noni's emails. You name it, they <br>
           mention it in their newsletter!
     </p></div>
-   <div id="piefrase"><br><p id="nombreraro"> - Shambhavi Mishra,</p><p id="agregadoraro"> Cutest girl on the planet</p></div>
   </div>
+  <div class="textodebajo"><p id="nombreraro"> - Shambhavi Mishra,</p><p id="agregadoraro"> Cutest girl on the planet</p></div>
   </div>
   <div class="sectionthree">
     <div id="titulosectionthree"><p>Why Noni, not others?</p></div>
@@ -62,14 +63,7 @@
        newsletters, and it’s impossible to list all of them. But <br>
         for now, these four are enough to convince you:</p>
   </div>
-  
-  <div class="menuesdesplegables">
-
-
-
-  </div>
-  
-  <div class="sectionfour"></div>
+  <div class="sectionfour">
   <div class="sectionsuscribe"></div>
   <div class="sectionfoot"></div>
 </body>
