--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
       <div class="finalinput">
         <div class="input-text">
         <input id="inputwhite" type="text" placeholder="Enter your email address">
-        <a href="postsuscripcion.html"><div id="botonbusqueda"><p id="buscar-palabra">Subscribe</p></div></a>
+        <a href="postsuscripcion.html">
+          <div id="botonbusqueda">
+            <p id="buscar-palabra">Subscribe</p>
+          </div>
+        </a>
       </div>
     </div>
     </div>
@@ -58,10 +62,33 @@
   <div class="textodebajo"><p id="nombreraro"> - Shambhavi Mishra,</p><p id="agregadoraro"> Cutest girl on the planet</p></div>
   </div>
   <div class="sectionthree">
-    <div id="titulosectionthree"><p>Why Noni, not others?</p></div>
-    <p id="textosectionthree">There are many reasons to prefer Noni over other <br>
-       newsletters, and it’s impossible to list all of them. But <br>
-        for now, these four are enough to convince you:</p>
+    <div class="textotextodos">
+      <div id="titulosectionthree">
+        <p>Why Noni, not others?</p>
+      </div>
+      <p id="textosectionthree">There are many reasons to prefer Noni over other <br>
+        newsletters, and it’s impossible to list all of them. But <br>
+          for now, these four are enough to convince you:</p>
+      <div class="menudesplegable">
+        <div class="menues">
+          <p>Make Your Inbox Healthy</p>
+          <img src="arrow-ios-downward-outline 1.png" alt="" id="flecha">
+        </div>
+        <div class="menues">
+          <p>Written By The Greatest Of All</p>
+          <img src="arrow-ios-downward-outline 1.png" alt="" id="flecha">
+        </div>
+        <div class="menues">
+          <p>Unique and exclusive gift in every email</p>
+          <img src="arrow-ios-downward-outline 3.png" alt="" id="flecha">
+         <!-- <p id="segundotextomenu">We sent unique and exlusive gift to each and every <br>
+            subscriber of Noni, no strings attached.</p> -->
+        </div>
+      </div>
+    </div>
+    <div class="imagensectionthree">
+      <img src="hobby, nature _ garden, gardening, water, plant, flower, love, care, woman, people.png" alt="" id="imagensectionthree">
+    </div>
   </div>
   <div class="sectionfour">
   <div class="sectionsuscribe"></div>
