--- a/index.html
+++ b/index.html
@@ -50,48 +50,122 @@
       </div>
   </div>
   <div class="sectiontwo">
-    <div class="twoflex">
-    <div class="frase"><p id="segundotexto">
-      I subscribed to this newsletter because I heard it's really <br>
-       creative. The last thing I want is for my inbox to be cluttered <br>
+    <div class="container">
+      <div class="twoflex">
+        <div class="frase">
+          <p id="segundotexto">I subscribed to this newsletter because I heard it's really <br>
+        creative. The last thing I want is for my inbox to be cluttered <br>
         with the same old stuff. Every day when I open my email, I find <br>
-         something new and exciting in Noni's emails. You name it, they <br>
-          mention it in their newsletter!
-    </p></div>
-  </div>
-  <div class="textodebajo"><p id="nombreraro"> - Shambhavi Mishra,</p><p id="agregadoraro"> Cutest girl on the planet</p></div>
-  </div>
-  <div class="sectionthree">
-    <div class="textotextodos">
-      <div id="titulosectionthree">
-        <p>Why Noni, not others?</p>
+        something new and exciting in Noni's emails. You name it, they <br>
+        mention it in their newsletter!</p>
+        </div>
       </div>
-      <p id="textosectionthree">There are many reasons to prefer Noni over other <br>
-        newsletters, and it’s impossible to list all of them. But <br>
-          for now, these four are enough to convince you:</p>
-      <div class="menudesplegable">
-        <div class="menues">
-          <p>Make Your Inbox Healthy</p>
-          <img src="arrow-ios-downward-outline 1.png" alt="" id="flecha">
-        </div>
-        <div class="menues">
-          <p>Written By The Greatest Of All</p>
-          <img src="arrow-ios-downward-outline 1.png" alt="" id="flecha">
-        </div>
-        <div class="menues">
-          <p>Unique and exclusive gift in every email</p>
-          <img src="arrow-ios-downward-outline 3.png" alt="" id="flecha">
-         <!-- <p id="segundotextomenu">We sent unique and exlusive gift to each and every <br>
-            subscriber of Noni, no strings attached.</p> -->
-        </div>
+      <div class="textodebajo">
+        <p id="nombreraro"> - Shambhavi Mishra,</p>
+        <p id="agregadoraro"> Cutest girl on the planet</p>
       </div>
     </div>
-    <div class="imagensectionthree">
-      <img src="hobby, nature _ garden, gardening, water, plant, flower, love, care, woman, people.png" alt="" id="imagensectionthree">
+  </div>
+  <div class="sectionthree">
+    <div class="container">
+      <div class="textotextodos">
+        <div id="titulosectionthree">
+          <p>Why Noni, not others?</p>
+        </div>
+        <p id="textosectionthree">There are many reasons to prefer Noni over other <br>
+          newsletters, and it’s impossible to list all of them. But <br>
+            for now, these four are enough to convince you:</p>
+        <div class="menudesplegable">
+          <div class="menues">
+            <p>Make Your Inbox Healthy</p>
+            <img src="arrow-ios-downward-outline 1.png" alt="" id="flecha">
+          </div>
+          <div class="menues">
+            <p>Written By The Greatest Of All</p>
+            <img src="arrow-ios-downward-outline 1.png" alt="" id="flecha">
+          </div>
+          <div class="menues">
+            <p>Unique and exclusive gift in every email</p>
+            <img src="arrow-ios-downward-outline 3.png" alt="" id="flecha">
+          <!-- <p id="segundotextomenu">We sent unique and exlusive gift to each and every <br>
+              subscriber of Noni, no strings attached.</p> -->
+          </div>
+        </div>
+      </div>
+      <div class="imagensectionthree">
+        <img src="hobby, nature _ garden, gardening, water, plant, flower, love, care, woman, people.png" alt="" id="imagensectionthree">
+      </div>
     </div>
   </div>
   <div class="sectionfour">
-  <div class="sectionsuscribe"></div>
-  <div class="sectionfoot"></div>
+    <div class="container">
+      <div class="containerfour">
+        <div class="sectionfourtext">
+          <p>Still not in, look at these issues</p>
+          <p>We release a new issue every week, some of them are emotional while other are inspiring. If you want to get a taste of our newsletter, you can read our these previous issue.</p>
+        </div>
+        <div class="sectionfourimg">
+          <div class="sectionfourimgbox">
+            <img src="Rectangle 57.png" alt="">
+            <p>Why Design is the key to Winning the Presidential Election</p>
+            <p>Read Now >></p>
+          </div>
+          <div class="sectionfourimgbox">
+            <img src="Rectangle 58.png" alt="">
+            <p>How
+              Creativity
+              Can Keep You
+              Out of Trouble</p>
+            <p>Read Now >></p>
+          </div>
+          <div class="sectionfourimgbox">
+            <img src="Rectangle 59.png" alt="">
+            <p>11 BS Facts About
+              Emotional
+            Everyone Thinks
+            Are True
+            </p>
+            <p>Read Now >></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="sectionsuscribe">
+    <div class="container">
+        <div class="textosuscribe">
+          <p class="subscribetext">Subscribe</p>
+          <p>Yay! You made it to the end. Means you like what we do.</p>
+        </div>
+        <div class="buskador">
+          <div class="inputinput">
+            <div class="finalinput">
+              <div class="input-textcuatro">
+              <input id="inputwhite" type="text" placeholder="Enter your email address">
+                <div id="botonbusqueda">
+                  <p id="buscar-palabra">Subscribe</p>
+                </div>
+            </div>
+          </div>
+          </div>
+        </div>
+    </div>
+  </div>
+  <div class="sectionfoot">
+    <div class="logo">
+      <img src="Noni.png" alt="logo">
+    </div>
+    <div class="sections">
+    <div class="secciones">
+      <p class="seccionita">About</p>
+      <p class="seccionita">Team</p>
+      <p class="seccionita">Careers</p>
+      <p class="seccionita">Contact</p>
+    </div>
+  </div>
+    <div class="redes">
+      <img src="Group 68.png" alt="">
+    </div>
+  </div>
 </body>
 </html>
