--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div class="container">
       <div class="twoflex">
         <div class="frase">
-          <p id="segundotexto">I subscribed to this newsletter because I heard it's really <br>
-        creative. The last thing I want is for my inbox to be cluttered <br>
-        with the same old stuff. Every day when I open my email, I find <br>
-        something new and exciting in Noni's emails. You name it, they <br>
+          <p id="segundotexto">I subscribed to this newsletter because I heard it's really
+        creative. The last thing I want is for my inbox to be cluttered
+        with the same old stuff. Every day when I open my email, I find
+        something new and exciting in Noni's emails. You name it, they
         mention it in their newsletter!</p>
         </div>
       </div>
