--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
           </div>
         </div>
       </div>
-      <div class="imagensectionthree">
+      <!-- <div class="imagensectionthree"> -->
         <img src="hobby, nature _ garden, gardening, water, plant, flower, love, care, woman, people.png" alt="" id="imagensectionthree">
-      </div>
+      <!-- </div> -->
     </div>
   </div>
   <div class="sectionfour">
