--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
     <div class="container">
       <div class="containerfour">
         <div class="sectionfourtext">
-          <p>Still not in, look at these issues</p>
-          <p>We release a new issue every week, some of them are emotional while other are inspiring. If you want to get a taste of our newsletter, you can read our these previous issue.</p>
+          <p id="primertextosectionfour">Still not in, look at these issues</p>
+          <p>We release a new issue every week, some of them are emotional while other are inspiring. If <br>
+             you want to get a taste of our newsletter, you can read our these previous issue.</p>
         </div>
         <div class="sectionfourimg">
           <div class="sectionfourimgbox">
