--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
           <p class="subscribetext">Subscribe</p>
           <p>Yay! You made it to the end. Means you like what we do.</p>
         </div>
-        <div class="buskador">
-          <div class="inputinput">
-            <div class="finalinput">
-              <div class="input-textcuatro">
-              <input id="inputwhite" type="text" placeholder="Enter your email address">
-                <div id="botonbusqueda">
-                  <p id="buscar-palabra">Subscribe</p>
-                </div>
-            </div>
+        <div class="inputinput buskador">
+          <div class="finalinput">
+            <div class="input-text">
+            <input id="inputwhite" type="text" placeholder="Enter your email address">
+            <a href="postsuscripcion.html" id="botonbusquedaa">
+              <div id="botonbusqueda">
+                <p id="buscar-palabra">Subscribe</p>
+              </div>
+            </a>
           </div>
-          </div>
+        </div>
         </div>
     </div>
   </div>
