--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="main.js"></script>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="Noni.png"/>
+  <link rel="stylesheet" href="mediaquery.css">
 </head>
 <body>
   <div class="header">
